--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -12,10 +12,11 @@
   border: none;
   transition: visibility 0s, background 0.3s;
   margin-top: 48px;
+  transition: opacity 0.3s ease;
 }
 
-.popup__button:hover {
-  background: rgba(0, 0, 0, 0.8);
+.popup__button:not(.popup__button_disabled):hover {
+  opacity: 0.8;
   cursor: pointer;
 }
 
