--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -10,8 +10,16 @@
   margin-bottom: 10px;
 }
 
+.popup__input:focus {
+  outline: none;
+}
+
 .popup__input:last-of-type {
   margin-bottom: 0;
+}
+
+.popup__input::placeholder {
+  color: #C4C4C4;
 }
 
 @media screen and (max-width: 568px) {
