--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -5,8 +5,12 @@
 @import url('./__form/popup__form.css');
 @import url('./__input/popup__input.css');
 @import url('./__button/popup__button.css');
+@import url('./__button/_disabled/popup__button_disabled.css');
 @import url('./__caption/popup__caption.css');
 @import url('./__image/popup__image.css');
+@import url('./__error/popup__error.css');
+@import url('./__error/_visible/popup__error_visible.css');
+@import url('./__error/_disabled/popup__button_disabled.css');
 
 .popup {
   font-family: 'Inter', Arial, sans-serif;
